--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <button type="button" class="main-header-btn" data-modal-open>
           Request our service
         </button>
-        <div class="modal-backdrop is-hidden" data-modal>
+        <div class="modal-backdrop" data-modal>
           <!-- <div class="modal-container"> -->
             <div class="modal-window">
               <button type="button" class="modal-button" data-modal-close>
@@ -75,6 +75,9 @@
                   <use href="./images/icons.svg#icon-exit"></use>
                 </svg>
               </button>
+              <form>
+                <label for=""></label>
+              </form>
             </div>
           <!-- </div> -->
         </div>
