--- a/index.html
+++ b/index.html
@@ -76,20 +76,28 @@
             </button>
             <h2>Leave your information and we'll call you back</h2>
             <form class="modal-form">
-              <label for="modal-input-name">Name</label>
-              <input type="text" id="modal-input-name">
+              <div class="modal-form-container">
+                <label for="modal-input-name">Name</label>
+                <input type="text" id="modal-input-name">
+              </div>
 
-              <label for="modal-input-tel">Telephone</label>
-              <input type="tel" id="modal-input-tel">
+              <div class="modal-form-container">
+                <label for="modal-input-tel">Telephone</label>
+                <input type="tel" id="modal-input-tel">
+              </div>
 
-              <label for="modal-input-mail">E-mail</label>
-              <input type="mail" id="modal-input-mail">
+              <div class="modal-form-container">
+                <label for="modal-input-mail">E-mail</label>
+                <input type="mail" id="modal-input-mail">
+              </div>
 
               <label for="modal-input-comments">Comments</label>
               <textarea id="modal-input-comments" placeholder="Enter the text"></textarea>
 
               <label for="modal-input-checkbox"></label>
-              <input type="checkbox" placeholder="Enter the text">
+              <input type="checkbox">
+                I agree with the newsletter and accept the Terms and Conditions
+              </input>
 
               <button type="submit">Submit</button>
             </form>
