--- a/index.html
+++ b/index.html
@@ -80,16 +80,25 @@
               <label for="modal-input-name">Name</label>
               <div class="modal-form-container">
                 <input type="text" id="modal-input-name" name="user-name">
+                <svg>
+                  <use href="./images/icons.svg#icon-form-name"></use>
+                </svg>
               </div>
 
               <label for="modal-input-tel">Telephone</label>
               <div class="modal-form-container">
                 <input type="tel" id="modal-input-tel" name="user-number">
+                <svg>
+                  <use href="./images/icons.svg#icon-form-phone"></use>
+                </svg>
               </div>
 
               <label for="modal-input-mail">E-mail</label>
               <div class="modal-form-container">
                 <input type="mail" id="modal-input-mail" name="user-mail">
+                <svg>
+                  <use href="./images/icons.svg#icon-form-mail"></use>
+                </svg>
               </div>
 
               <label for="modal-input-comments">Comments</label>
@@ -99,7 +108,7 @@
                 I agree with the newsletter and accept the Terms and Conditions
               </label>
               <input type="checkbox" id="modal-checkbox">
-              
+
               <button type="submit">Submit</button>
             </form>
           </div>
