--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
               <label for="modal-input-comments">Comments</label>
               <textarea id="modal-input-comments" placeholder="Enter the text"></textarea>
 
-              <label for="modal-checkbox">
+              <label for="modal-checkbox" class="form-checkbox">
+                <input type="checkbox" id="modal-checkbox">
                 I agree with the newsletter and accept the Terms and Conditions
+                <span class="custom-checkbox"></span>
               </label>
-              <input type="checkbox" id="modal-checkbox">
-
               <button type="submit">Submit</button>
             </form>
           </div>
