--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <button type="button" class="main-header-btn" data-modal-open>
           Request our service
         </button>
-        <div class="modal-backdrop" data-modal>
+        <div class="modal-backdrop is-hidden" data-modal>
           <div class="modal-window">
             <button type="button" class="modal-button" data-modal-close>
               <svg>
@@ -77,7 +77,7 @@
             <h2>Leave your information and we'll call you back</h2>
             <form class="modal-form">
               
-              <label for="modal-input-name">Name</label>
+              <label for="modal-input-name" class="modal-label">Name</label>
               <div class="modal-form-container">
                 <input type="text" id="modal-input-name" name="user-name">
                 <svg>
@@ -85,7 +85,7 @@
                 </svg>
               </div>
 
-              <label for="modal-input-tel">Telephone</label>
+              <label for="modal-input-tel" class="modal-label">Telephone</label>
               <div class="modal-form-container">
                 <input type="tel" id="modal-input-tel" name="user-number">
                 <svg>
@@ -93,7 +93,7 @@
                 </svg>
               </div>
 
-              <label for="modal-input-mail">E-mail</label>
+              <label for="modal-input-mail" class="modal-label">E-mail</label>
               <div class="modal-form-container">
                 <input type="mail" id="modal-input-mail" name="user-mail">
                 <svg>
@@ -101,13 +101,18 @@
                 </svg>
               </div>
 
-              <label for="modal-input-comments">Comments</label>
+              <label for="modal-input-comments" class="modal-label">Comments</label>
               <textarea id="modal-input-comments" placeholder="Enter the text"></textarea>
 
               <label for="modal-checkbox" class="form-checkbox">
                 <input type="checkbox" id="modal-checkbox">
-                I agree with the newsletter and accept the Terms and Conditions
-                <span class="custom-checkbox"></span>
+                <span class="custom-checkbox">
+                  <svg class="custom-checkbox-element">
+                    <use href="./images/icons.svg#icon-checkbox-border"></use>
+                  </svg>
+                </span>
+                I agree with the newsletter and accept the
+                <a href="">Terms and Conditions</a>
               </label>
               <button type="submit">Submit</button>
             </form>
@@ -482,6 +487,12 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <form class="footer-subscribe">
+            <label for=""></label>
+            <input type="email" name="email">
+          </form>
         </div>
       </div>
     </footer>
