--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <div class="footer-form">
           <h2>Subscribe to the newsletter</h2>
           <form class="footer-subscribe">
-            <input id="footer-subscribe-email" type="email" name="email">
+            <input id="footer-subscribe-email" type="email" name="email" placeholder="E-mail">
             <button type="submit" class="footer-form-button">
               <span>Suscribe</span>
               <svg>
