--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               
               <label for="modal-input-name" class="modal-label">Name</label>
               <div class="modal-form-container">
-                <input type="text" id="modal-input-name" name="user-name">
+                <input type="text" id="modal-input-name" name="user-name" required minlength="3">
                 <svg>
                   <use href="./images/icons.svg#icon-form-name"></use>
                 </svg>
@@ -87,7 +87,7 @@
 
               <label for="modal-input-tel" class="modal-label">Telephone</label>
               <div class="modal-form-container">
-                <input type="tel" id="modal-input-tel" name="user-number">
+                <input type="tel" id="modal-input-tel" name="user-number" >
                 <svg>
                   <use href="./images/icons.svg#icon-form-phone"></use>
                 </svg>
@@ -95,7 +95,7 @@
 
               <label for="modal-input-mail" class="modal-label">E-mail</label>
               <div class="modal-form-container">
-                <input type="email" id="modal-input-mail" name="user-mail">
+                <input type="email" id="modal-input-mail" name="user-mail" required>
                 <svg>
                   <use href="./images/icons.svg#icon-form-mail"></use>
                 </svg>
