--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <use href="./images/icons.svg#icon-exit"></use>
               </svg>
             </button>
-            <h2>Leave your information and we'll call you back</h2>
+            <p>Leave your information and we'll call you back</p>
             <form class="modal-form">
               
               <label for="modal-input-name" class="modal-label">Name</label>
@@ -114,7 +114,7 @@
                 I agree with the newsletter and accept the
                 <a href="">Terms and Conditions</a>
               </label>
-              <button type="submit">Submit</button>
+              <button type="submit" class="button form-button">Submit</button>
             </form>
           </div>
         </div>
@@ -489,7 +489,7 @@
           </ul>
         </div>
         <div class="footer-form">
-          <h2>Subscribe to the newsletter</h2>
+          <p>Subscribe to the newsletter</p>
           <form class="footer-subscribe">
             <input id="footer-subscribe-email" type="email" name="email" placeholder="E-mail">
             <button type="submit" class="footer-form-button">
