--- a/portfolio.html
+++ b/portfolio.html
@@ -324,6 +324,18 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p>Subscribe to the newsletter</p>
+          <form class="footer-subscribe">
+            <input id="footer-subscribe-email" type="email" name="email" placeholder="E-mail">
+            <button type="submit" class="footer-form-button">
+              <span>Suscribe</span>
+              <svg>
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
