--- a/portfolio.html
+++ b/portfolio.html
@@ -17,40 +17,40 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="header-nav container">
-        <a href="" class="logo"><span class="logo-span">Web</span>Studio</a>
-        <ul class="header-nav-list">
-          <li>
-            <a href="./index.html" class="header-link">Studio</a>
+      <nav class="header__nav container">
+        <a href="" class="logo header__logo"><span class="logo__span header__logo--decoration">Web</span>Studio</a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="./index.html" class="nav__link">Studio</a>
           </li>
-          <li>
-            <a href="" class="header-link current" target="_self"
+          <li class="nav__item">
+            <a href="" class="nav__link nav__link--current" target="_self"
               >Portfolio</a
             >
           </li>
-          <li>
-            <a href="" class="header-link">Contacts</a>
+          <li class="nav__item">
+            <a href="" class="nav__link">Contacts</a>
           </li>
         </ul>
-        <ul class="header-contacts">
-          <li>
+        <ul class="header__contacts">
+          <li class="contacts__item">
             <a
               href="mailto:info@devstudio.com"
-              class="header-link header-contacts-mail"
+              class="contacts__link contacts__mail"
             >
-              <svg class="icon header-contacts-envelope">
+              <svg class="icon contacts__envelope">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
            </a>
           </li>
-          <li>
+          <li class="contacts__item">
             <a
               href="tel:+12127724150"
               id="test"
-              class="header-link header-contacts-phone"
+              class="contacts__link contacts__phone"
             >
-              <svg id="test-svg" class="icon header-contacts-smartphone">
+              <svg class="icon contacts__smartphone">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +1 212-772-4150
@@ -61,199 +61,208 @@
     </header>
 
     <!-- Main content -->
-    <main class="portfolio-main">
-      <section class="section portfolio-main-section">
+    <main class="portfolio">
+      <section class="section portfolio__section">
         <div class="container">
           <!-- filter -->
-          <h1 class="portfolio-main-header">Projects</h1>
-          <ul class="portfolio-main-filter">
-            <li>
-              <button type="button" class="portfolio-main-filter-btn">
+          <h1 class="portfolio__header">Projects</h1>
+          <ul class="portfolio__filter">
+            <li class="filter__item">
+              <button type="button" class="filter__btn">
                 All
               </button>
             </li>
-            <li>
-              <button type="button" class="portfolio-main-filter-btn">
+            <li class="filter__item">
+              <button type="button" class="filter__btn">
                 Web-sites
               </button>
             </li>
-            <li>
+            <li class="filter__item">
               <button
                 type="button"
-                class="portfolio-main-filter-btn potrfolio-main-filter-btn-all"
+                class="filter__btn filter__btn--apps-btn"
               >
                 Apps
               </button>
             </li>
-            <li>
-              <button type="button" class="portfolio-main-filter-btn">
+            <li class="filter__item">
+              <button type="button" class="filter__btn">
                 Design
               </button>
             </li>
-            <li>
-              <button type="button" class="portfolio-main-filter-btn">
+            <li class="filter__item">
+              <button type="button" class="filter__btn">
                 Marketing
               </button>
             </li>
           </ul>
           <!-- projects -->
-          <ul class="portfolio-main-projects-list">
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+          <ul class="portfolio__projects">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-1.jpg"
                   alt="laptop with three company workers on screen"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">Technoduck</h2>
-                <p class="portfolio-main-projects-list-p">Web-site</p>
+              <div class="projects__description-container">
+                <h2 class="projects__title">Technoduck</h2>
+                <p class="projects__text">Web-site</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-2.jpg"
                   alt="two baseball players playing baseball"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Poster New Orlean vs Golden Star
                 </h2>
                 <p class="portfolio-main-projects-list-p">Design</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-3.jpg"
                   alt="fish with the seafood restaurant label"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Seafood Restaurant
                 </h2>
-                <p class="portfolio-main-projects-list-p">Apps</p>
+                <p class="projects__text">Apps</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-4.jpg"
                   alt="black wireless headset"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Project Prime
                 </h2>
-                <p class="portfolio-main-projects-list-p">Marketing</p>
+                <p class="projects__text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-5.jpg"
                   alt="two boxes lying near each other"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Project Boxes
                 </h2>
-                <p class="portfolio-main-projects-list-p">Apps</p>
+                <p class="projects__text">Apps</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-6.jpg"
                   alt="screen with world map"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Inspiration has no Borders
                 </h2>
-                <p class="portfolio-main-projects-list-p">Web-site</p>
+                <p class="projects__text">Web-site</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-7.jpg"
                   alt="open book with limited edition header"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Limited Edition
                 </h2>
-                <p class="portfolio-main-projects-list-p">Design</p>
+                <p class="projects__text">Design</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-8.jpg"
                   alt="tag with label tag writing"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">Project LAB</h2>
-                <p class="portfolio-main-projects-list-p">Marketing</p>
+              <div class="projects__description-container">
+                <h2 class="projects__title">Project LAB</h2>
+                <p class="projects__text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-main-projects-list-element">
-              <div class="portfolio-projects-img-container">
+            <li class="projects__element">
+              <div class="projects__img-container">
                 <img
                   src="images/portfolio-img-9.jpg"
                   alt="laptop with growing business writing on screen"
+                  class="projects__img"
                 />
-                <p class="portfolio-main-projects-list-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
+                <p class="projects__img-text">Technoduck is a state-of-the-art coronavirus distribution platform. 
                   Companies use this platform for digital espionage and attacks on competitors' 
                   secure servers.
                 </p>
               </div>
-              <div>
-                <h2 class="portfolio-main-projects-list-title">
+              <div class="projects__description-container">
+                <h2 class="projects__title">
                   Growing Business
                 </h2>
-                <p class="portfolio-main-projects-list-p">Apps</p>
+                <p class="projects__text">Apps</p>
               </div>
             </li>
           </ul>
@@ -263,74 +272,74 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-box">
-          <a href="" class="logo"><span class="logo-span">Web</span>Studio</a>
+      <div class="container footer__container">
+        <div class="footer__box">
+          <a href="" class="logo footer__logo"><span class="footer__logo--decoration">Web</span>Studio</a>
           <address>
-            <ul class="footer-address-list">
-              <li>
+            <ul class="footer__address">
+              <li class="address__item">
                 <a
                   href="https://goo.gl/maps/p9hUCcMR8sWm7efz9"
-                  class="footer-address"
+                  class="address__link address__link--decoration"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   695 Park Ave, New York, NY 10065, <span>United States</span>
                 </a>
               </li>
-              <li>
-                <a href="mailto:info@devstudio.com" class="footer-contact"
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a href="tel:+12127724150" class="footer-contact"
+              <li class="address__item">
+                <a href="tel:+12127724150" class="address__link"
                   >+1 212-772-4150</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social-accounts">
-          <p>Find us on</p>
-          <ul class="social-accounts">
+        <div class="footer__accounts-box">
+          <p class="accounts-box__text">Find us on</p>
+          <ul class="footer__social-accounts">
             <li>
-              <a href="" aria-label="instagram link">
-                <svg>
+              <a href="" class="social-accounts__link footer__accounts-link--decoration" aria-label="instagram link">
+                <svg class="social-accounts__svg footer_accounts-svg--decoration">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" aria-label="twitter link">
-                <svg>
+              <a href="" class="social-accounts__link footer__accounts-link--decoration" aria-label="twitter link">
+                <svg class="social-accounts__svg footer_accounts-svg--decoration">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" aria-label="facebook link">
-                <svg>
+              <a href="" class="social-accounts__link footer__accounts-link--decoration" aria-label="facebook link">
+                <svg class="social-accounts__svg footer_accounts-svg--decoration">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" aria-label="linkedin link">
-                <svg>
+              <a href="" class="social-accounts__link footer__accounts-link--decoration" aria-label="linkedin link">
+                <svg class="social-accounts__svg footer_accounts-svg--decoration">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <p>Subscribe to the newsletter</p>
-          <form class="footer-subscribe">
-            <input id="footer-subscribe-email" type="email" name="email" placeholder="E-mail">
-            <button type="submit" class="footer-form-button">
-              <span>Suscribe</span>
-              <svg>
+        <div class="footer__form-container">
+          <p class="form-container__text">Subscribe to the newsletter</p>
+          <form class="form-container__form-subscribe">
+            <input class="form-subscribe__input" type="email" name="email" placeholder="E-mail">
+            <button type="submit" class="button form-subscribe__button">
+              Suscribe
+              <svg class="button__svg footer__form-btn--svg">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
